syntax="proto3";

option go_package = "./pkg/pb/product";

service ProductService {
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
}

message GetProductRequest {
  string ProductId = 1;
}

message GetProductResponse {
  string Id = 1;
  string Name = 2;
  string MinPrice = 3;
  string Description = 4;
  int32 Quantity = 5;
}

